Document every part of quackjvm, with runnable examples
Ten pages under docs/: storing objects, querying, joins, aggregates,
writing, tuning, troubleshooting and migrating, plus an index and the
existing getting-started and API reference.

Every snippet is checked against the real API rather than written from
memory, and the SQL ones were run: PIVOT, window functions with QUALIFY,
approx_count_distinct and median all work through Rows; COPY does not,
because it returns no ResultSet, so the Parquet export example now uses
a plain JDBC Statement and says why.

Three things the docs turned up and fixed:

- DuckDBFlags' javadoc called FlagsEnabled.enableFlags(...), which does
  not exist in CQEngine 3.6.0, and addAll(Iterable, QueryOptions), which
  is not on IndexedCollection. Both now match the real API.
- README described the tables as cq_objects and cqtbl_<attribute>; they
  are cq_<collection> and cqidx_<collection>_<attribute>.
- getting-started still told readers to build from source at
  1.0.0-SNAPSHOT.

CQEngine has no notExistsIn factory, so the anti-join is documented as
not(existsIn(...)) - verified against a live database rather than
assumed.